--- a/package.json
+++ b/package.json
@@ -1,34 +1,15 @@
-"scripts": {
-  "generate:sitemap": "node scripts/generateSitemap.js",
-  "postinstall": "npm run generate:sitemap"
-}
 {
-  "name": "igcse",
-  "description": "IGCSE API",
+  "name": "igcse-backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "description": "IGCSE Full Backend",
+  "main": "server.js",
   "scripts": {
-    "dev": "node .",
-    "sitemap": "node sitemap.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.1",
-    "openai": "^3.2.1",
-    "webity": "^3.3.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/intfract/igcse.git"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/intfract/igcse/issues"
-  },
-  "homepage": "https://github.com/intfract/igcse#readme"
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
